# HDANet

./: pyproject.toml
configs/: train.yaml
configs/data/: fusion_data.yaml
configs/experiment/: example.yaml  train_fusion.yaml
configs/logger/: tensorboard.yaml
configs/model/: fusion_module.yaml
src/data/: fusion_datamodule.py  mnist_datamodule.py
src/models/: fusion_module.py
src/models/components/: detection_lenet.py  detection_resnet.py  fusion_net.py
src/utils/: pylogger.py
