[project]
name = "hdanet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.14.0",
  "hydra-colorlog==1.2.0",
  "hydra-core==1.3.2",
  "hydra-optuna-sweeper==1.2.0",
  "lightning>=2.0.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "rich>=14.1.0",
  "rootutils>=1.0.7",
  "scipy>=1.15.3",
  "torch>=2.0.0",
  "torchmetrics>=0.11.4",
  "torchvision>=0.15.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124"},
]
torchvision = [
  { index = "pytorch-cu124"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
